--- a/catalog.html
+++ b/catalog.html
@@ -190,10 +190,12 @@
         <h2 class="visually-hidden">Каталог мороженого</h2>
         <ul class="offers-list">
           <li class="offers-item">
+              <div class="price-wrapper">
             <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
             <div class="catalog-list-item-price">
               <span class="item-price">310</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -201,10 +203,12 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
+              <div class="price-wrapper">
             <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
             <div class="catalog-list-item-price">
               <span class="item-price">380</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочно-кофейное с кусочками шоколада</a>
@@ -212,10 +216,12 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
+              <div class="price-wrapper">
             <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
             <div class="catalog-list-item-price">
               <span class="item-price">355</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочно-клубничное с присыпкой из белого шоколада</a>
@@ -223,10 +229,12 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
+              <div class="price-wrapper">
             <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
             <div class="catalog-list-item-price">
               <span class="item-price">415</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочное крем-брюле с карамельной подливкой</a>
@@ -234,10 +242,12 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
+              <div class="price-wrapper">
             <img src="img/item-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
             <div class="catalog-list-item-price">
               <span class="item-price">325</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочное с брусничным джемом</a>
@@ -245,22 +255,25 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
+              <div class="price-wrapper">
             <img src="img/item-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
             <div class="catalog-list-item-price">
               <span class="item-price">410</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочно-черничное с цельными ягодами черники</a>
             </h3>
-
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
+              <div class="price-wrapper">
             <img src="img/item-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
             <div class="catalog-list-item-price">
               <span class="item-price">375</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочно-лимонное с карамельной присыпкой</a>
@@ -268,10 +281,12 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
+              <div class="price-wrapper">
             <img src="img/item-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
             <div class="catalog-list-item-price">
               <span class="item-price">320</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочное с шоколадной стружкой</a>
@@ -279,10 +294,12 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
+              <div class="price-wrapper">
             <img src="img/item-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
             <div class="catalog-list-item-price">
               <span class="item-price">440</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочно-ванильное с кусочками шоколада</a>
@@ -290,10 +307,12 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
+              <div class="price-wrapper">
             <img src="img/item-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
             <div class="catalog-list-item-price">
               <span class="item-price">435</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочноe с ментоловым сиропом</a>
@@ -302,10 +321,12 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
+              <div class="price-wrapper">
             <img src="img/item-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
             <div class="catalog-list-item-price">
               <span class="item-price">420</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочное с кусочками черного шоколада</a>
@@ -313,10 +334,12 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
+              <div class="price-wrapper">
             <img src="img/item-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
             <div class="catalog-list-item-price">
               <span class="item-price">355</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочное с мятным сиропом</a>
@@ -387,7 +410,7 @@
         <a href="https://htmlacademy.ru/intensive/htmlcss">
           <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
         </a>
-        <p class="made-in">Сделано в
+        <p class="copyright">Сделано в
           <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
       </div>
     </footer>
