--- a/index.html
+++ b/index.html
@@ -134,10 +134,12 @@
         <h2 class="visually-hidden">Хиты продаж</h2>
         <ul class="hits-list">
           <li class="offers-item">
+              <div class="price-wrapper">
             <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
             <div class="catalog-list-item-price">
               <span class="item-price">310</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
@@ -145,10 +147,12 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
+              <div class="price-wrapper">
             <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
             <div class="catalog-list-item-price">
               <span class="item-price">380</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочно-кофейное с кусочками шоколада</a>
@@ -156,21 +160,27 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
+              <div class="price-wrapper">
+            <div class="price-wrapper">
             <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
             <div class="catalog-list-item-price">
               <span class="item-price">355</span>
               <span class="item-weight">/кг</span>
+              </div>
+            </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочно-клубничное с присыпкой из белого шоколада</a>
             </h3>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
-          <li class="offers-item">
+          <li class="offers-item"> 
+              <div class="price-wrapper">
             <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
             <div class="catalog-list-item-price">
               <span class="item-price">415</span>
               <span class="item-weight">/кг</span>
+              </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочное крем-брюле с карамельной подливкой</a>
@@ -273,7 +283,7 @@
         <a href="https://htmlacademy.ru/intensive/htmlcss">
           <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="Логотип HTML Academy">
         </a>
-        <p class="made-in">Сделано в
+        <p class="copyright">Сделано в
           <a href="https://htmlacademy.ru/intensive/htmlcss">HTML Academy</a> © 2017</p>
       </div>
     </footer>
