--- a/catalog.html
+++ b/catalog.html
@@ -56,7 +56,8 @@
             </a>
             <form class="user-navigation modal-search" action="https://echo.htmlacademy.ru" method="post">
               <label class="visually-hidden" for="input-search">Поиск по сайту</label>
-              <input class="user-navigation-input" type="search" name="search" id="input-search" placeholder="Что ищем?" tabindex="0">
+              <input class="user-navigation-input" type="search" name="search" id="input-search" placeholder="Что ищем?"
+                tabindex="0">
             </form>
           </li>
           <li>
@@ -64,13 +65,13 @@
             <form class="user-navigation-login" action="https://echo.htmlacademy.ru" method="post">
               <fieldset>
                 <label class="visually-hidden" for="entry-email">Электронная почта</label>
-                <input class="user-navigation-input" type="email" name="email" id="entry-email" placeholder="Электронная почта" tabindex="0"
-                  required>
+                <input class="user-navigation-input" type="email" name="email" id="entry-email" placeholder="Электронная почта"
+                  tabindex="0" required>
               </fieldset>
               <fieldset>
                 <label class="visually-hidden" for="entry-password">Пароль</label>
-                <input class="user-navigation-input" type="password" name="password" id="entry-password" placeholder="Пароль" tabindex="0"
-                  required>
+                <input class="user-navigation-input" type="password" name="password" id="entry-password" placeholder="Пароль"
+                  tabindex="0" required>
               </fieldset>
               <button class="button-enter">Войти</button>
               <p class="user-navigation-links">
@@ -190,11 +191,11 @@
         <h2 class="visually-hidden">Каталог мороженого</h2>
         <ul class="offers-list">
           <li class="offers-item">
-              <div class="price-wrapper">
-            <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-            <div class="catalog-list-item-price">
-              <span class="item-price">310</span>
-              <span class="item-weight">/кг</span>
+            <div class="price-wrapper">
+              <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+              <div class="catalog-list-item-price">
+                <span class="item-price">310</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
@@ -203,11 +204,11 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
-              <div class="price-wrapper">
-            <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-            <div class="catalog-list-item-price">
-              <span class="item-price">380</span>
-              <span class="item-weight">/кг</span>
+            <div class="price-wrapper">
+              <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+              <div class="catalog-list-item-price">
+                <span class="item-price">380</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
@@ -216,11 +217,11 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
-              <div class="price-wrapper">
-            <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-            <div class="catalog-list-item-price">
-              <span class="item-price">355</span>
-              <span class="item-weight">/кг</span>
+            <div class="price-wrapper">
+              <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+              <div class="catalog-list-item-price">
+                <span class="item-price">355</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
@@ -229,11 +230,11 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
-              <div class="price-wrapper">
-            <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-            <div class="catalog-list-item-price">
-              <span class="item-price">415</span>
-              <span class="item-weight">/кг</span>
+            <div class="price-wrapper">
+              <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+              <div class="catalog-list-item-price">
+                <span class="item-price">415</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
@@ -242,11 +243,11 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
-              <div class="price-wrapper">
-            <img src="img/item-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
-            <div class="catalog-list-item-price">
-              <span class="item-price">325</span>
-              <span class="item-weight">/кг</span>
+            <div class="price-wrapper">
+              <img src="img/item-5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
+              <div class="catalog-list-item-price">
+                <span class="item-price">325</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
@@ -255,11 +256,11 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
-              <div class="price-wrapper">
-            <img src="img/item-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
-            <div class="catalog-list-item-price">
-              <span class="item-price">410</span>
-              <span class="item-weight">/кг</span>
+            <div class="price-wrapper">
+              <img src="img/item-6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
+              <div class="catalog-list-item-price">
+                <span class="item-price">410</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
@@ -268,11 +269,11 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
-              <div class="price-wrapper">
-            <img src="img/item-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
-            <div class="catalog-list-item-price">
-              <span class="item-price">375</span>
-              <span class="item-weight">/кг</span>
+            <div class="price-wrapper">
+              <img src="img/item-7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
+              <div class="catalog-list-item-price">
+                <span class="item-price">375</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
@@ -281,11 +282,11 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
-              <div class="price-wrapper">
-            <img src="img/item-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
-            <div class="catalog-list-item-price">
-              <span class="item-price">320</span>
-              <span class="item-weight">/кг</span>
+            <div class="price-wrapper">
+              <img src="img/item-8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
+              <div class="catalog-list-item-price">
+                <span class="item-price">320</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
@@ -294,11 +295,11 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
-              <div class="price-wrapper">
-            <img src="img/item-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
-            <div class="catalog-list-item-price">
-              <span class="item-price">440</span>
-              <span class="item-weight">/кг</span>
+            <div class="price-wrapper">
+              <img src="img/item-9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
+              <div class="catalog-list-item-price">
+                <span class="item-price">440</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
@@ -307,11 +308,11 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
-              <div class="price-wrapper">
-            <img src="img/item-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
-            <div class="catalog-list-item-price">
-              <span class="item-price">435</span>
-              <span class="item-weight">/кг</span>
+            <div class="price-wrapper">
+              <img src="img/item-10.jpg" width="267" height="267" alt="Сливочноe с ментоловым сиропом">
+              <div class="catalog-list-item-price">
+                <span class="item-price">435</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
@@ -321,11 +322,11 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
-              <div class="price-wrapper">
-            <img src="img/item-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
-            <div class="catalog-list-item-price">
-              <span class="item-price">420</span>
-              <span class="item-weight">/кг</span>
+            <div class="price-wrapper">
+              <img src="img/item-11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
+              <div class="catalog-list-item-price">
+                <span class="item-price">420</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
@@ -334,11 +335,11 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
-              <div class="price-wrapper">
-            <img src="img/item-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
-            <div class="catalog-list-item-price">
-              <span class="item-price">355</span>
-              <span class="item-weight">/кг</span>
+            <div class="price-wrapper">
+              <img src="img/item-12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
+              <div class="catalog-list-item-price">
+                <span class="item-price">355</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
