--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             </a>
             <form class="user-navigation modal-search" action="https://echo.htmlacademy.ru" method="post">
               <label class="visually-hidden" for="input-search">Поиск по сайту</label>
-              <input class="user-navigation-input" type="search" name="search" id="input-search" placeholder="Что ищем?" tabindex="0">
+              <input class="user-navigation-input" type="search" name="search" id="input-search" placeholder="Что ищем?"
+                tabindex="0">
             </form>
           </li>
           <li>
@@ -62,13 +63,13 @@
             <form class="user-navigation-login" action="https://echo.htmlacademy.ru" method="post">
               <fieldset>
                 <label class="visually-hidden" for="entry-email">Электронная почта</label>
-                <input class="user-navigation-input" type="email" name="email" id="entry-email" placeholder="Электронная почта" tabindex="0"
-                  required>
+                <input class="user-navigation-input" type="email" name="email" id="entry-email" placeholder="Электронная почта"
+                  tabindex="0" required>
               </fieldset>
               <fieldset>
                 <label class="visually-hidden" for="entry-password">Пароль</label>
-                <input class="user-navigation-input" type="password" name="password" id="entry-password" placeholder="Пароль" tabindex="0"
-                  required>
+                <input class="user-navigation-input" type="password" name="password" id="entry-password" placeholder="Пароль"
+                  tabindex="0" required>
               </fieldset>
               <button class="button-enter">Войти</button>
               <p class="user-navigation-links">
@@ -126,7 +127,8 @@
         </div>
         <div class="deals-item-chocolate">
           <h3>Шоколадки даром!</h3>
-          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно
+            бесплатно.</p>
           <a class="deals-button" href="catalog.html">Хочу шоколадки!</a>
         </div>
       </section>
@@ -134,11 +136,11 @@
         <h2 class="visually-hidden">Хиты продаж</h2>
         <ul class="hits-list">
           <li class="offers-item">
-              <div class="price-wrapper">
-            <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-            <div class="catalog-list-item-price">
-              <span class="item-price">310</span>
-              <span class="item-weight">/кг</span>
+            <div class="price-wrapper">
+              <img src="img/item-1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+              <div class="catalog-list-item-price">
+                <span class="item-price">310</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
@@ -147,11 +149,11 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
-              <div class="price-wrapper">
-            <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-            <div class="catalog-list-item-price">
-              <span class="item-price">380</span>
-              <span class="item-weight">/кг</span>
+            <div class="price-wrapper">
+              <img src="img/item-2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
+              <div class="catalog-list-item-price">
+                <span class="item-price">380</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
@@ -160,26 +162,26 @@
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
           <li class="offers-item">
-              <div class="price-wrapper">
             <div class="price-wrapper">
-            <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-            <div class="catalog-list-item-price">
-              <span class="item-price">355</span>
-              <span class="item-weight">/кг</span>
+              <div class="price-wrapper">
+                <img src="img/item-3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+                <div class="catalog-list-item-price">
+                  <span class="item-price">355</span>
+                  <span class="item-weight">/кг</span>
+                </div>
               </div>
-            </div>
             </div>
             <h3 class="offers-title">
               <a href="catalog.html">Сливочно-клубничное с присыпкой из белого шоколада</a>
             </h3>
             <a class="offers-btn" href="#">Быстрый просмотр</a>
           </li>
-          <li class="offers-item"> 
-              <div class="price-wrapper">
-            <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-            <div class="catalog-list-item-price">
-              <span class="item-price">415</span>
-              <span class="item-weight">/кг</span>
+          <li class="offers-item">
+            <div class="price-wrapper">
+              <img src="img/item-4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
+              <div class="catalog-list-item-price">
+                <span class="item-price">415</span>
+                <span class="item-weight">/кг</span>
               </div>
             </div>
             <h3 class="offers-title">
@@ -193,13 +195,17 @@
         <h2 class="visually-hidden">Преимущества</h2>
         <h3>Магазин Глэйси- это онлайн- и офлайн-магазин по продаже мороженного собственного производства на развес</h3>
         <ul class="features-list">
-          <li class="features-icecream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных
+          <li class="features-icecream">Все наше мороженое изготавливается на собственном производстве, с
+            использованием современного оборудования и проверенных
             временем технологий.</li>
-          <li class="features-partners">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает
+          <li class="features-partners">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и
+            компаний, с которыми нас связывает
             долговременное сотрудничество.</li>
-          <li class="features-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты
+          <li class="features-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего
+            качества. Все дополнительные ингредиенты
             и добавки произведены из натурального, экологически чистого сырья.</li>
-          <li class="features-thermo">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять
+          <li class="features-thermo">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке,
+            который не дает мороженому растаять
             в пути и позволяет сохранить превосходный вкус.</li>
         </ul>
       </section>
@@ -210,7 +216,8 @@
         </article>
         <section class="subscription-form">
           <h2 class="visually-hidden">Подписка</h2>
-          <p class="distrib">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем
+          <p class="distrib">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у
+            нас происходит. Обещаем
             не спамить и не слать всякой ненужной ерунды. Честно =)</p>
           <form class="news-distrib" action="https://echo.htmlacademy.ru" method="post">
             <label class="visually-hidden" for="email-news">Электронная почта</label>
@@ -293,15 +300,18 @@
         <button class="modal-feedback-close" type="button">Закрыть</button>
         <fieldset>
           <label class="visually-hidden" for="feedback-name">Имя</label>
-          <input class="feedback-input" type="text" id="feedback-name" placeholder="Как вас зовут?" tabindex="0" required>
+          <input class="feedback-input" type="text" id="feedback-name" placeholder="Как вас зовут?" tabindex="0"
+            required>
         </fieldset>
         <fieldset>
           <label class="visually-hidden" for="feedback-email">Электронная почта</label>
-          <input class="feedback-input" type="email" id="feedback-email" placeholder="Ваша почта для ответа?" tabindex="0" required>
+          <input class="feedback-input" type="email" id="feedback-email" placeholder="Ваша почта для ответа?" tabindex="0"
+            required>
         </fieldset>
         <fieldset>
           <label class="visually-hidden" for="feedback-text">Напишите что-нибудь</label>
-          <textarea class="feedback-input-textarea" id="feedback-text" rows="6" placeholder="Напишите что-нибудь..." tabindex="0" required></textarea>
+          <textarea class="feedback-input-textarea" id="feedback-text" rows="6" placeholder="Напишите что-нибудь..."
+            tabindex="0" required></textarea>
         </fieldset>
         <button class="feedback-btn">Отправить</button>
       </form>
