--- a/catalog.html
+++ b/catalog.html
@@ -120,9 +120,11 @@
             </section>
           </li>
         </ul>
-        <div class="page-header-info">
-          <p class="opening-hours">С 10 до 20, ежедневно</p>
-          <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
+        <div class="contacts-wrapper">
+          <div class="page-header-info">
+            <p class="opening-hours">С 10 до 20, ежедневно</p>
+            <a class="phone-number" href="tel:+78124502525">8 812 450-25-25</a>
+          </div>
         </div>
       </div>
     </header>
