--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
               </li>
             </ul>
           </li>
-          <li>
+          <li class="site-navigation-sub">
             <a href="#">Доставка и оплата</a>
           </li>
-          <li>
+          <li class="site-navigation-sub">
             <a href="#">О Компании</a>
           </li>
         </ul>
@@ -313,7 +313,7 @@
           <textarea class="feedback-input-textarea" id="feedback-text" rows="6" placeholder="Напишите что-нибудь..."
             tabindex="0" required></textarea>
         </fieldset>
-        <button class="feedback-btn">Отправить</button>
+        <button class="button-submit">Отправить</button>
       </form>
     </div>
   </div>
